--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "nbbpm": {
     "compatibility": "^1.9.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "jsonfile": "^4.0.0"
+  },
   "devDependencies": {},
   "bugs": {
     "url": "https://github.com/MinecraftForgeFrance/nodebb-plugin-mff-forge-event/issues"
