--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "url": "git+https://github.com/MinecraftForgeFrance/nodebb-plugin-forge-event.git"
   },
   "author": "Superloup10 <Superloup10@gmail.com>",
+  "contributors": [{
+    "name": "BrokenSwing",
+    "email": "fhugouvieux@gmail.com"
+  }],
   "license": "BSD-2-Clause",
   "nbbpm": {
     "compatibility": "^1.9.0"
