--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodebb-plugin-mff-forge-event",
+  "name": "@minecraftforgefrance/nodebb-plugin-mff-forge-event",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,13 +8,19 @@
     "url": "git+https://github.com/MinecraftForgeFrance/nodebb-plugin-forge-event.git"
   },
   "author": "Superloup10 <Superloup10@gmail.com>",
-  "contributors": [{
-    "name": "BrokenSwing",
-    "email": "fhugouvieux@gmail.com"
-  }],
+  "contributors": [
+    {
+      "name": "BrokenSwing",
+      "email": "fhugouvieux@gmail.com"
+    },
+    {
+      "name": "robin4002",
+      "email": "robin4002@gmail.com"
+    }
+  ],
   "license": "BSD-2-Clause",
   "nbbpm": {
-    "compatibility": "^1.9.0"
+    "compatibility": "^2.0.0"
   },
   "dependencies": {
     "jsonfile": "^4.0.0"
