--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   ],
   "license": "BSD-2-Clause",
   "nbbpm": {
-    "compatibility": "^3.0.0"
+    "compatibility": "^3.0.0 || ^4.0.0"
   },
   "dependencies": {
     "jsonfile": "^6.1.0"
